...
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="HTTPTimer" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="HTTPTimer" systemMenu="apple" id="uQy-DD-JDr">
...
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                                        <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW">
                                            <connections>
                                                <segue destination="DZh-bg-lNn" kind="modal" id="JDU-cf-iem"/>
...
                <customObject id="kRc-nX-Ei6" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                <windowController id="DZh-bg-lNn" sceneMemberID="viewController">
                    <window key="window" title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="zTP-xG-10V">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
...
                                </textFieldCell>
                            </textField>
                            <popUpButton identifier="intervalPreferences" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rv7-My-Ulv">
                                <rect key="frame" x="209" y="80" width="100" height="26"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            <menuItem title="1" state="on" id="jfa-Ot-lmw"/>
                                            <menuItem title="5" id="3aa-vD-7QJ"/>
                                            <menuItem title="15" id="Yy3-yy-Qfd"/>
                                            <menuItem title="30" id="lYF-9R-e1a"/>
                                        </items>
                                    </menu>
...
                                <rect key="frame" x="344" y="10" width="92" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Jqm-KN-jnM">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button identifier="startButton" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F6U-5A-2mI">
                                <rect key="frame" x="14" y="13" width="154" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Start" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eCH-45-qeJ">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                </connections>
                            </button>
                            <button identifier="stopButton" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pB2-E9-IPM">
                                <rect key="frame" x="312" y="13" width="154" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Stop" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="nHG-ZZ-ds4">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                <accessibility description="startedTextField" identifier="startedTextField"/>
                            </textField>
                            <textField identifier="sentRequestsTextField" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jZa-gj-cn6">
                                <rect key="frame" x="306" y="147" width="132" height="17"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                <accessibility description="sentRequestsTextField" identifier="sentRequestsTextField"/>
                            </textField>
                            <textField identifier="hostTextField" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oay-il-yx4">
                                <rect key="frame" x="307" y="107" width="131" height="17"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                            </box>
                            <textField identifier="headingText" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0w2-bj-P3K">
                                <rect key="frame" x="153" y="213" width="175" height="41"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                </textFieldCell>
                            </textField>
                            <textField identifier="statusTextField" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sdy-P2-yhw" userLabel="statusTextField">
                                <rect key="frame" x="306" y="73" width="127" height="17"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
